syntax = "proto2";

option java_package = "com.ximedes.ov.protocol";
option java_outer_classname = "IdProtocol";

message IdRequest {
}
message IdResponse {
    optional string id = 1;
}

message IdsRequest {
    required int32 number = 1;
}
message IdsResponse {
    repeated string ids = 1;
}
